--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,8 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Assets/00-Scenes/Main-Prototype 1.unity
+Assets/03-Prototype1/Prefabs.meta
+Assets/03-Prototype1/Prefabs/Ballon.prefab.meta
+Assets/03-Prototype1/Scripts.meta
+UserSettings/Layouts/default-2022.dwlt
